--- a/wa_web_clone/public/index.html
+++ b/wa_web_clone/public/index.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
     integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/80d5667f84.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../src/style/css/main.css">
 </head>
 
 <body>
